[package]
name = "midi-vlq"
version = "0.1.0"
edition = "2021"
authors = ["Jorge Rinaldi <jrg.rinaldi@gmail.com>"]
license = "MIT"
repository = "https://github.com/m-rinaldi/midi-vlq"
description = "Variable-Length Quantity for the MIDI file format"
keywords = ["vlq", "midi", "integer", "encoding", "variable-length"]

[dependencies]
local_vec = "0.5"
